[project]
name = "cc-pipeline"
version = "0.1.0"
description = "En pipeline för svensk CommonCrawl-data"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "datatrove",
    "fasteners>=0.20",
    "fasttext>=0.9.3",
    "fasttext-wheel>=0.9.2",
    "faust-cchardet>=2.1.19",
    "fsspec>=2026.4.0",
    "levenshtein>=0.27.3",
    "lxml>=6.1.1",
    "orjson>=3.11.9",
    "python-magic>=0.4.27",
    "regex>=2026.5.9",
    "requests>=2.34.2",
    "rouge-score>=0.1.2",
    "spacy>=3.8.14",
    "stop-words>=2018.7.23",
    "warcio>=1.8.1",
]

[tool.uv.sources]
datatrove = { git = "https://github.com/huggingface/datatrove/" }
[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]

target-version = "py310"
line-length = 100

[tool.ruff.lint]

select = ["E", "F", "I"]
ignore = []
